# drift-rs

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs
crates/pubsub-client/: Cargo.toml
crates/src/: event_subscriber.rs  jit_client.rs  jupiter.rs  lib.rs  utils.rs
crates/src/grpc/: grpc_subscriber.rs
crates/src/math/: constants.rs
examples/event-subscriber/src/: main.rs
examples/grpc-monitor/: .env.example  Cargo.toml  README.md  wallet.json.example
examples/grpc-monitor/src/: display.rs  main.rs  monitor.rs  trading.rs
tests/: integration.rs  jupiter.rs
