[package]
name = "grpc-monitor"
version = "0.1.0"
edition = "2021"
description = "Real-time gRPC monitoring of BTC prices and account balances"

[dependencies]
argh = "0.1.13"
colored = "2.0"
drift-rs = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "2.3"
tokio = { version = "1.42", features = ["full"] }
dotenv = "0.15"

[patch."https://github.com/jup-ag/jupiter-swap-api-client"]
jupiter-swap-api-client = { path = "crates/jupiter-swap-api-client/jupiter-swap-api-client" }

